# llm-sql

./: .gitignore  README.md  main.py  pyproject.toml
llm_sql/: main.py
llm_sql/modules/: db.py  db_tables.sql
