[tool.poetry]
name = "llm-sql"
version = "0.1.0"
description = ""
authors = ["Sean Wesenberg <wookets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = ".main:main"